--- a/frontend/templates/admin/menu.html
+++ b/frontend/templates/admin/menu.html
@@ -78,6 +78,28 @@
                         </ul>
                     </li>
                 </li>
+                <li>
+                    <li class="start" ng-class="{ 'active' : active === 'officers'} ">
+                        <a href="javascript:;">
+                            <i class="fa fa-lock" aria-hidden="true"></i>
+                            <span class="title "> Seguridad</span>
+                            <span class="arrow "></span>
+                            <span class="selected "></span>
+                        </a>
+                        <ul class="sub-menu">
+                            <li ui-sref="officers()" ng-class="{ 'active' : active === 'officers'}">
+                                <a href="">
+                                    <i class="fa fa-shield" aria-hidden="true"></i> Oficiales
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <i class="fa fa-clock-o" aria-hidden="true"></i> Turnos
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                </li>
                 <!-- END ANGULARJS LINK -->
                 <!-- <li class="heading">
         <h3 class="uppercase">Features</h3>
