--- a/frontend/templates/admin/resident/new_resident.html
+++ b/frontend/templates/admin/resident/new_resident.html
@@ -41,71 +41,75 @@
                     </div>
                 </div>
                 <div class="portlet-body form">
-                    <form role="form">
-                        <div class="form-body">
-
-                            <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
-                            <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
-                            <input type='file' id="imgInp" />
-
-                            <div class="col-md-6 marging-top-20">
-
-                                <div class="form-group form-md-line-input">
-                                    <input ng-model="name" type="text" class="form-control" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Nombre</label>
+                    <form role="form" <div class="form-body">
+                        <div class="col-md-offset-9 col-md-3">
+                            <span class=" font-15 gray-font col-md-8">Dueño de casa: </span>
+                            <div class="lg-checkbox-list col-md-4">
+                                <div class="md-checkbox">
+                                    <input type="checkbox" id="checkbox1" class="md-check">
+                                    <label for="checkbox1">
+                                      <span></span>
+                                      <span class="check"></span>
+                                      <span class="box"></span>
+                                       </label>
                                 </div>
+                            </div>
+                        </div>
+                        <h3 class="text-center"><img id="blah" src="https://x1.xingassets.com/assets/frontend_minified/img/users/nobody_m.original.jpg" alt="your image" width="200px" height="200px" class="img-circle"/></h3>
+                        <h3 class="text-center"><label for="imgInp"  class="btn default btn-file fileinput-new">Subir imagen</label></h3>
+                        <input type='file' id="imgInp" />
 
-                                <!-- <div class="form-group form-md-line-input form-md-floating-label">
-                                <input   type="text" class="form-control" id="form_control_1" required title="Input required">
-                                <label for="form_control_1">Nombre</label>
-                            </div> -->
-
-                                <div class="form-group form-md-line-input">
-                                    <input ng-model="last_name" type="text" class="form-control" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Primer Apellido</label>
-                                </div>
-                                <div class="form-group form-md-line-input">
-                                    <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Segundo Apellido</label>
-                                </div>
-                                <div class="form-group form-md-line-input">
-                                    <input ng-model="identification_number" type="text" class="form-control" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Número de cédula</label>
-                                </div>
-
-
+                        <div class="col-md-6 marging-top-20">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="name" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Nombre</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="last_name" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Primer Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="second_last_name" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Segundo Apellido</label>
+                            </div>
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="identification_number" type="text" class="form-control" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Número de cédula</label>
                             </div>
 
-                            <div class="col-md-6 marging-top-20">
-                                <div class="form-group form-md-line-input">
-                                    <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" placeholder="">
-                                    <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
-                                </div>
 
-                                <!-- <div class="form-group form-md-line-input form-md-floating-label">
+                        </div>
+
+                        <div class="col-md-6 marging-top-20">
+                            <div class="form-group form-md-line-input">
+                                <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" placeholder="">
+                                <label for="form_control_1" class="font-15">Fecha de nacimiento</label>
+                            </div>
+
+                            <!-- <div class="form-group form-md-line-input form-md-floating-label">
                               <input ng-model="birthday" type="text" class="form-control date-picker" id="form_control_2" required title="Input required">
                               <label for="form_control_2">Fecha de nacimiento</label>
                           </div> -->
 
-                                <div class="form-group form-md-line-input">
-                                    <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Número celular</label>
-                                </div>
-                                <div class="form-group form-md-line-input ">
-                                    <input ng-model="email" type="email" class="form-control" placeholder="" id="form_control_1">
-                                    <label for="form_control_1" class="font-15">Correo electrónico</label>
-                                </div>
-                                <div class="form-group form-md-line-input has-info">
+                            <div class="form-group form-md-line-input">
+                                <input ng-focus="expression==1" ng-model="phone_number" type="text" placeholder="" class="form-control" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Número celular</label>
+                            </div>
+                            <div class="form-group form-md-line-input ">
+                                <input ng-model="email" type="email" class="form-control" placeholder="" id="form_control_1">
+                                <label for="form_control_1" class="font-15">Correo electrónico</label>
+                            </div>
+                            <div class="form-group form-md-line-input has-info">
 
-                                    <select name="repeatSelect" class="form-control" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
+                                <select name="repeatSelect" class="form-control" ng-model="house" ng-options="house.house_number for house in houses | orderBy: 'house_number' track by house.id" required>
                                   </select>
-                                    <label for="form_control_1" class="font-15">Número de casa</label >
+                                <label for="form_control_1" class="font-15">Número de casa</label >
                             </div>
 
                         </div>
                         <div class="form-actions noborder">
                             <h3 class="text-right">
-                            <button type="submit" class="btn blue">{{button}}</button>
+                            <button type="submit" class="btn blue" ><i class="fa fa-pencil "></i> {{button}}</button>
                             <button type="button" class="btn default">Cancelar</button>
                           </h3>
                         </div>
