--- a/frontend/templates/admin/header.html
+++ b/frontend/templates/admin/header.html
@@ -164,7 +164,7 @@
 					<a href="javascript:;" class="dropdown-toggle" data-toggle="dropdown" data-hover="dropdown" data-close-others="true">
 						<img alt="" class="img-circle" src="../../assets/admin/layout/img/avatar3_small.jpg" />
 						<span class="username username-hide-on-mobile">
-					{{user.uid}} </span>
+					{{user.profile_name}} </span>
 						<i class="fa fa-angle-down"></i>
 					</a>
 					<ul class="dropdown-menu dropdown-menu-default">
