--- a/frontend/templates/admin/index.html
+++ b/frontend/templates/admin/index.html
@@ -17,7 +17,7 @@
 	<link href="../../assets/global/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/uniform/css/uniform.default.css" rel="stylesheet" type="text/css" />
 	<link href="../../assets/global/plugins/bootstrap-switch/css/bootstrap-switch.min.css" rel="stylesheet" type="text/css" />
-	<link rel="stylesheet" href="../../assets/global/plugins/bootstrap-toastr/toastr.min.css" media="screen" title="no title">
+
 	<!-- END GLOBAL MANDATORY STYLES -->
 	<!-- BEGIN THEME STYLES -->
 	<link href="../../assets/global/css/components.css" id="style_components" rel="stylesheet" type="text/css" />
@@ -33,6 +33,7 @@
 	<!-- END THEME STYLES -->
 	<link rel="shortcut icon " href="favicon.ico " />
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons " rel="stylesheet ">
+	<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css" media="screen" title="no title">
 </head>
 
 <div ui-view="login"></div>
@@ -47,7 +48,7 @@
 			</div>
 			<div class="page-content-wrapper ">
 				<div class="page-content ">
-					<div ui-view="body ">
+					<div ui-view="body">
 					</div>
 				</div>
 			</div>
@@ -97,7 +98,7 @@
 <script src="../../assets/global/plugins/jquery.cokie.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/uniform/jquery.uniform.min.js" type="text/javascript"></script>
 <script src="../../assets/global/plugins/bootstrap-switch/js/bootstrap-switch.min.js" type="text/javascript"></script>
-<script src="../../assets/global/plugins/bootstrap-toastr/toastr.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.5/angular.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
 <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.1/angular-cookies.min.js"></script>
