--- a/frontend/templates/admin/officer/index.html
+++ b/frontend/templates/admin/officer/index.html
@@ -35,7 +35,13 @@
         <button type="submit" class="btn green col-md-2 small-margin-bottom" ui-sref="newOfficer()">Registrar oficial</button>
 
         <div class="portlet-body ">
-            <div class="table-scrollable ">
+            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+                <h1 class="text-center">
+          <img src="../../assets/global/img/loader4.gif" alt="" />
+          <h6 class="text-center">Cargando...</h6>
+        </h1>
+            </div>
+            <div class="table-scrollable loading" id="tableData">
                 <table class="table table-striped table-hover font-12">
                     <thead>
                         <tr>
@@ -58,3 +64,8 @@
                 </table>
             </div>
         </div>
+        <script>
+            jQuery(document).ready(function() {
+                $("#loadingIcon").fadeIn("slow");
+            });
+        </script>
