--- a/frontend/assets/global/css/media-main.css
+++ b/frontend/assets/global/css/media-main.css
@@ -87,6 +87,9 @@
   #access_tittle{
     font-size: 25px !important;
   }
+  #index-search-bar{
+    padding: 0 !important;
+  }
 }
 
 @media only screen and  (max-width: 500px)  {
@@ -115,7 +118,10 @@
   min-height: 40% !important;
   margin-top: 2% !important;
 }
+.page-title{
+  font-size: 25px !important;
 
+}
 .input_id{
   font-size:  17px !important;
   height: 10% !important;
@@ -128,6 +134,9 @@
   margin-bottom:  3%!important;
   margin-top: -20px;
   height: 17% !important;
+}
+#index-search-bar{
+  padding: 0 !important;
 }
 #house_number_span{
   font-size: 20px;
