--- a/frontend/templates/admin/resident/index.html
+++ b/frontend/templates/admin/resident/index.html
@@ -37,7 +37,13 @@
         </div>
         <button type="submit" class="btn green col-md-2 col-sm-3 col-xs-12 small-margin-bottom" ui-sref="newResident()">Registrar residente</button>
         <div class="portlet-body ">
-            <div class="table-scrollable ">
+            <div class="loading col-lg-12 col-md-12 col-sm-12 col-xs-12" id="loadingIcon">
+                <h1 class="text-center">
+          <img src="../../assets/global/img/loader4.gif" alt="" />
+          <h6 class="text-center">Cargando...</h6>
+        </h1>
+            </div>
+            <div class="table-scrollable loading" id="tableData">
                 <table class="table table-striped table-hover font-12">
                     <thead>
                         <tr>
@@ -74,3 +80,9 @@
 </div>
 <h1 class="text-center gray-font">No se encuentran datos</h1>
 <script src="../../assets/global/scripts/select2.min.js" type="text/javascript"></script>
+
+<script>
+    jQuery(document).ready(function() {
+        $("#loadingIcon").fadeIn("slow");
+    });
+</script>
