--- a/backend/shield/app/views/registration_mailer/sample_email.html.erb
+++ b/backend/shield/app/views/registration_mailer/sample_email.html.erb
@@ -54,7 +54,7 @@
       <h2 style="text-align:center;">¡Bienvenido a Shield!</h2>
       <hr>
       <p>
-        Bienvenido a Shield, encontrarás en este correo tus credenciales, utilizalos para iniciar sesión en nuestra página web
+        Hola <%=@user.name%>, bienvenido a Shield! , encontrarás en este correo tus credenciales, utilizalos para iniciar sesión en nuestra página web
         <a href="www.skillmatrixsapiens.com">www.shieldcr.com</a>
       </p>
       <h4>Email: <%= @user.email %></h4>
